# restoran_Qt

./: .clangd  .gitignore  CMakeLists.txt  algorithms.cpp  algorithms.h  appkasir_kafe.qrc  main.cpp  main.qss  models.h  restaurantapp.cpp  restaurantapp.h  styles.cpp
pages/: page_cart.cpp  page_cashier.cpp  page_consumer.cpp  page_home.cpp  page_kitchen.cpp  page_login.cpp  page_waiter.cpp
